force-app/main/default/objects/Recommendation_Outcome__c/Recommendation_Outcome__c.object-meta.xml
<CustomObject>
    <label>Recommendation Outcome</label>
    <pluralLabel>Recommendation Outcomes</pluralLabel>
    <nameField>
        <label>Outcome Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Immutable preview log of what recommendation was surfaced and what option a player selected. Write-once analytics record. Preview_Only__c is always true. No real order, payment, case, claim, shipment, or refund is ever created from this object.</description>
</CustomObject>