force-app/main/default/objects/Recommendation_Outcome__c/fields/Agentforce_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Session_ID__c</fullName>
    <label>Agentforce Session ID</label>
    <length>100</length>
    <type>Text</type>
    <description>Session identifier returned by Agentforce when copy is generated by the agent. Null for mock-sourced sessions. Used for tracing agent-generated recommendations.</description>
</CustomField>