force-app/main/default/objects/Recommendation_Outcome__c/fields/External_Outcome_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Outcome_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Outcome ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
    <description>UUID generated by middleware at resolution preview time. Used as upsert key. Guarantees idempotent write on retry.</description>
</CustomField>