force-app/main/default/objects/Recommendation_Outcome__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Internal notes for this outcome record. Not forwarded to the frontend. Internal audit use only.</description>
</CustomField>