force-app/main/default/objects/Recommendation_Outcome__c/fields/Options_Presented__c.field-meta.xml
<CustomField>
    <fullName>Options_Presented__c</fullName>
    <label>Options Presented</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of option IDs presented to the player in this session. Example: ["dualsense","edge","limited"]. Stored as a string for analytics and audit purposes.</description>
</CustomField>