force-app/main/default/objects/Recommendation_Outcome__c/fields/Player_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_ID__c</fullName>
    <label>Player ID</label>
    <length>20</length>
    <type>Text</type>
    <description>External player identifier cross-referencing Contact.Player_ID__c. Values: PLAYER001–PLAYER004.</description>
</CustomField>