force-app/main/default/objects/Recommendation_Outcome__c/fields/Preview_Only__c.field-meta.xml
<CustomField>
    <fullName>Preview_Only__c</fullName>
    <label>Preview Only</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <description>Always true. Guards against any downstream process treating this record as a real resolution outcome. Middleware enforces this flag at write time.</description>
</CustomField>