force-app/main/default/objects/Recommendation_Outcome__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>PREVIEW_ONLY</fullName><default>true</default><label>Preview Only</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Always PREVIEW_ONLY in this demo phase. No real resolution, order, claim, shipment, payment, or refund is triggered by any record in this object. Additional values may be added in future approved phases.</description>
</CustomField>