force-app/main/default/objects/Recommendation_Outcome__c/fields/Selected_Option__c.field-meta.xml
<CustomField>
    <fullName>Selected_Option__c</fullName>
    <label>Selected Option</label>
    <length>50</length>
    <type>Text</type>
    <description>The option ID the player confirmed in the preview checkout. Values: dualsense, edge, limited, module. Preview-only; no fulfillment action taken.</description>
</CustomField>