force-app/main/default/objects/Recommendation_Outcome__c/fields/Selected_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Selected_Payment_Method__c</fullName>
    <label>Selected Payment Method</label>
    <length>50</length>
    <type>Text</type>
    <description>Display label of the payment method shown in the demo preview checkout. Example: wallet, card. No real payment is processed. Internal analytics only; never forwarded to frontend.</description>
</CustomField>