force-app/main/default/objects/Recommendation_Outcome__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <label>Session ID</label>
    <length>36</length>
    <type>Text</type>
    <description>UUID for the demo session in which this recommendation was presented. Generated by middleware and included in the response contract meta.sessionId.</description>
</CustomField>