force-app/main/default/objects/Recommendation_Outcome__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
    <description>UTC datetime when this outcome preview was recorded by the middleware. Maps to meta.generatedAt in the response contract.</description>
</CustomField>